# Route/userRoute.js
@@ -2,6 +2,7 @@
 import {SignIn,SignUp,ResetPassword,ForgotPassword,Validateopt,Logout,test, getAllusers} from '../controller/userController.js';
 import express from 'express';
 import { signUpValidation,signInValidation,otpValidation,resetPasswordValidation,forgotpasswordValidation, } from '../Utils/validation.js';
+import approveController from '../controller/approvecontroller.js';
 const route= express.Router();
 route.get("/Test",test)
 route.post('/signup',signUpValidation,SignUp)
@@ -10,5 +11,6 @@ route.get('/listAll',getAllusers)
 route.post('/resetpassword',resetPasswordValidation,ResetPassword)
 route.post('/forgotpassword',forgotpasswordValidation,ForgotPassword)
 route.post('/verify',otpValidation,Validateopt)
+route.get("/approve",approveController)
 
 export default route;
